--- a/project5_webtoon/client/login.ui
+++ b/project5_webtoon/client/login.ui
@@ -17,7 +17,7 @@
    <item row="0" column="1">
     <widget class="QStackedWidget" name="stackedWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="login">
       <layout class="QGridLayout" name="gridLayout_2">
@@ -276,13 +276,6 @@
              <enum>QFrame::Shadow::Raised</enum>
             </property>
             <layout class="QGridLayout" name="gridLayout_4">
-             <item row="2" column="3">
-              <widget class="QPushButton" name="pnumDupChkBtn">
-               <property name="text">
-                <string>중복 확인</string>
-               </property>
-              </widget>
-             </item>
              <item row="1" column="1">
               <widget class="QLabel" name="label_6">
                <property name="font">
@@ -390,6 +383,13 @@
              </item>
              <item row="0" column="3">
               <widget class="QPushButton" name="idDupChkBtn">
+               <property name="text">
+                <string>중복 확인</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="3">
+              <widget class="QPushButton" name="pnumDupChkBtn">
                <property name="text">
                 <string>중복 확인</string>
                </property>
@@ -891,6 +891,22 @@
     <hint type="destinationlabel">
      <x>341</x>
      <y>425</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>s_emailText</sender>
+   <signal>returnPressed()</signal>
+   <receiver>signUpBtn</receiver>
+   <slot>click()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>354</x>
+     <y>343</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>351</x>
+     <y>387</y>
     </hint>
    </hints>
   </connection>
