--- a/project5_webtoon/client/mainwindow.ui
+++ b/project5_webtoon/client/mainwindow.ui
@@ -59,7 +59,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
 }</string>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="entireListTab">
            <attribute name="title">
@@ -67,7 +67,76 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
            </attribute>
            <layout class="QGridLayout" name="gridLayout_4">
             <item row="0" column="0">
-             <widget class="QTableView" name="e_tableView"/>
+             <widget class="QTableView" name="e_tableView">
+              <property name="font">
+               <font>
+                <family>Ubuntu</family>
+                <pointsize>13</pointsize>
+                <bold>false</bold>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true"/>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::Shape::StyledPanel</enum>
+              </property>
+              <property name="editTriggers">
+               <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
+              </property>
+              <property name="textElideMode">
+               <enum>Qt::TextElideMode::ElideMiddle</enum>
+              </property>
+              <property name="gridStyle">
+               <enum>Qt::PenStyle::SolidLine</enum>
+              </property>
+              <property name="sortingEnabled">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QFrame" name="detailView_frame">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">#detailView_frame QFrame {
+    border: none;
+	padding:0px;
+}</string>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::Shape::StyledPanel</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Shadow::Raised</enum>
+              </property>
+              <layout class="QVBoxLayout" name="verticalLayout_2">
+               <item>
+                <widget class="QTableView" name="e_detailTableView">
+                 <property name="font">
+                  <font>
+                   <family>Ubuntu</family>
+                  </font>
+                 </property>
+                 <property name="editTriggers">
+                  <set>QAbstractItemView::EditTrigger::NoEditTriggers</set>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="e_back_btn">
+                 <property name="text">
+                  <string>뒤로 가기</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
             </item>
            </layout>
           </widget>
@@ -110,7 +179,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
 }</string>
               </property>
               <property name="currentIndex">
-               <number>5</number>
+               <number>6</number>
               </property>
               <widget class="QWidget" name="tab_5">
                <attribute name="title">
@@ -118,7 +187,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                </attribute>
                <layout class="QGridLayout" name="gridLayout_7">
                 <item row="0" column="0">
-                 <widget class="QTableView" name="tableView_4"/>
+                 <widget class="QTableView" name="tableView_mon"/>
                 </item>
                </layout>
               </widget>
@@ -128,7 +197,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                </attribute>
                <layout class="QGridLayout" name="gridLayout_8">
                 <item row="0" column="0">
-                 <widget class="QTableView" name="tableView_5"/>
+                 <widget class="QTableView" name="tableView_tue"/>
                 </item>
                </layout>
               </widget>
@@ -138,7 +207,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                </attribute>
                <layout class="QGridLayout" name="gridLayout_9">
                 <item row="0" column="0">
-                 <widget class="QTableView" name="tableView_6"/>
+                 <widget class="QTableView" name="tableView_wed"/>
                 </item>
                </layout>
               </widget>
@@ -148,7 +217,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                </attribute>
                <layout class="QGridLayout" name="gridLayout_10">
                 <item row="0" column="0">
-                 <widget class="QTableView" name="tableView_7"/>
+                 <widget class="QTableView" name="tableView_thu"/>
                 </item>
                </layout>
               </widget>
@@ -158,7 +227,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                </attribute>
                <layout class="QGridLayout" name="gridLayout_11">
                 <item row="0" column="0">
-                 <widget class="QTableView" name="tableView_8"/>
+                 <widget class="QTableView" name="tableView_fri"/>
                 </item>
                </layout>
               </widget>
@@ -168,7 +237,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                </attribute>
                <layout class="QGridLayout" name="gridLayout_12">
                 <item row="0" column="0">
-                 <widget class="QTableWidget" name="tableWidget"/>
+                 <widget class="QTableView" name="tableView_sat"/>
                 </item>
                </layout>
               </widget>
@@ -178,7 +247,7 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
                </attribute>
                <layout class="QGridLayout" name="gridLayout_13">
                 <item row="0" column="0">
-                 <widget class="QTableView" name="tableView_9"/>
+                 <widget class="QTableView" name="tableView_sun"/>
                 </item>
                </layout>
               </widget>
@@ -194,14 +263,35 @@ QTabWidget::tab-bar {  /* 탭 버튼을 감싸는 바 */
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout">
               <item>
+               <widget class="QComboBox" name="comboBox">
+                <item>
+                 <property name="text">
+                  <string>제목</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>작가</string>
+                 </property>
+                </item>
+               </widget>
+              </item>
+              <item>
                <widget class="QLabel" name="label">
                 <property name="text">
-                 <string>웹툰 검색</string>
+                 <string/>
                 </property>
                </widget>
               </item>
               <item>
                <widget class="QLineEdit" name="toonSearchText"/>
+              </item>
+              <item>
+               <widget class="QPushButton" name="pushButton">
+                <property name="text">
+                 <string>검색</string>
+                </property>
+               </widget>
               </item>
               <item>
                <spacer name="horizontalSpacer">
